Add database entry for multiple uploaded files.
